Prevent horizontal scrollbar in basic theme see http://stackoverflow.com/questions/24084077/how-to-remove-a-horizontal-scrollbar-appearing-while-using-twitter-bootstrap-on/24084275#24084275

--- a/themes/basic/basic.css
+++ b/themes/basic/basic.css
@@ -1,3 +1,8 @@
+.navbar-nav {
+  margin: 0;
+  padding: 0px 0px;
+}
+
 /*General*/
 .toggle {
   width: 100px;
